<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallasraiz1.SegundoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/segundo"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/texto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="161dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toTopOf="@+id/irPrimero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

    <Button
        android:id="@+id/irPrimero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_primero"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="457dp"

        app:layout_constraintBottom_toTopOf="@id/irTercero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto"
        />

    <Button
        android:id="@+id/irTercero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/ir_tercero"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/irPrimero" />
</androidx.constraintlayout.widget.ConstraintLayout>